tests/diagnostics/functions/argument_type_mismatch/expect.txt
# exit: 1
input/main.lang0:6:16: error: argument 1 to 'add' must be int64, got string
      return add("x", 2)
                 ^
